src.new/python/pysuv/srcn/src/uv.pxd


    cdef int uv_fs_copyfile(uv_loop_t* loop,
                                uv_fs_t* req,
                                const char* path,
                                const char* new_path,
                                int flags,
                                uv_fs_cb cb)    
    cdef int uv_fs_mkdir(uv_loop_t* loop,
                              uv_fs_t* req,
                              const char* path,
                              int mode,
                              uv_fs_cb cb)    
    cdef int uv_fs_mkdtemp(uv_loop_t* loop,
                                uv_fs_t* req,
                                const char* tpl,
                                uv_fs_cb cb)    
    cdef int uv_fs_mkstemp(uv_loop_t* loop,
                                uv_fs_t* req,
                                const char* tpl,
                                uv_fs_cb cb)    
    cdef int uv_fs_rmdir(uv_loop_t* loop,
                              uv_fs_t* req,
                              const char* path,
                              uv_fs_cb cb)    
    cdef int uv_fs_scandir(uv_loop_t* loop,
                                uv_fs_t* req,
                                const char* path,
                                int flags,
                                uv_fs_cb cb)    
    cdef int uv_fs_scandir_next(uv_fs_t* req,
                                    uv_dirent_t* ent)    
    cdef int uv_fs_opendir(uv_loop_t* loop,
                                uv_fs_t* req,
                                const char* path,
                                uv_fs_cb cb)    
    cdef int uv_fs_readdir(uv_loop_t* loop,
                                uv_fs_t* req,
                                uv_dir_t* dir,
                                uv_fs_cb cb)    
    cdef int uv_fs_closedir(uv_loop_t* loop,
                                uv_fs_t* req,
                                uv_dir_t* dir,
                                uv_fs_cb cb)    
    cdef int uv_fs_stat(uv_loop_t* loop,
                            uv_fs_t* req,
                            const char* path,
                            uv_fs_cb cb)    
    cdef int uv_fs_fstat(uv_loop_t* loop,
                              uv_fs_t* req,
                              uv_file file,
                              uv_fs_cb cb)    
    cdef int uv_fs_rename(uv_loop_t* loop,
                              uv_fs_t* req,
                              const char* path,
                              const char* new_path,
                              uv_fs_cb cb)    
    cdef int uv_fs_fsync(uv_loop_t* loop,
                              uv_fs_t* req,
                              uv_file file,
                              uv_fs_cb cb)    
    cdef int uv_fs_fdatasync(uv_loop_t* loop,
                                  uv_fs_t* req,
                                  uv_file file,
                                  uv_fs_cb cb)    
    cdef int uv_fs_ftruncate(uv_loop_t* loop,
                                  uv_fs_t* req,
                                  uv_file file,
                                  int64_t offset,
                                  uv_fs_cb cb)    
    cdef int uv_fs_sendfile(uv_loop_t* loop,
                                uv_fs_t* req,
                                uv_file out_fd,
                                uv_file in_fd,
                                int64_t in_offset,
                                size_t length,
                                uv_fs_cb cb)    
    cdef int uv_fs_access(uv_loop_t* loop,
                              uv_fs_t* req,
                              const char* path,
                              int mode,
                              uv_fs_cb cb)    
    cdef int uv_fs_chmod(uv_loop_t* loop,
                              uv_fs_t* req,
                              const char* path,
                              int mode,
                              uv_fs_cb cb)    
    cdef int uv_fs_utime(uv_loop_t* loop,
                              uv_fs_t* req,
                              const char* path,
                              double atime,
                              double mtime,
                              uv_fs_cb cb)    
    cdef int uv_fs_futime(uv_loop_t* loop,
                              uv_fs_t* req,
                              uv_file file,
                              double atime,
                              double mtime,
                              uv_fs_cb cb)    
    cdef int uv_fs_lutime(uv_loop_t* loop,
                              uv_fs_t* req,
                              const char* path,
                              double atime,
                              double mtime,
                              uv_fs_cb cb)    
    cdef int uv_fs_lstat(uv_loop_t* loop,
                              uv_fs_t* req,
                              const char* path,
                              uv_fs_cb cb)    
    cdef int uv_fs_link(uv_loop_t* loop,
                            uv_fs_t* req,
                            const char* path,
                            const char* new_path,
                            uv_fs_cb cb)    

    /*
    * This flag can be used with uv_fs_symlink() on Windows to specify whether
    * path argument points to a directory.
    */
    #define UV_FS_SYMLINK_DIR          0x0001

    /*
    * This flag can be used with uv_fs_symlink() on Windows to specify whether
    * the symlink is to be created using junction points.
    */
    #define UV_FS_SYMLINK_JUNCTION     0x0002

    cdef int uv_fs_symlink(uv_loop_t* loop,
                                uv_fs_t* req,
                                const char* path,
                                const char* new_path,
                                int flags,
                                uv_fs_cb cb)    
    cdef int uv_fs_readlink(uv_loop_t* loop,
                                uv_fs_t* req,
                                const char* path,
                                uv_fs_cb cb)    
    cdef int uv_fs_realpath(uv_loop_t* loop,
                                uv_fs_t* req,
                                const char* path,
                                uv_fs_cb cb)    
    cdef int uv_fs_fchmod(uv_loop_t* loop,
                              uv_fs_t* req,
                              uv_file file,
                              int mode,
                              uv_fs_cb cb)    
    cdef int uv_fs_chown(uv_loop_t* loop,
                              uv_fs_t* req,
                              const char* path,
                              uv_uid_t uid,
                              uv_gid_t gid,
                              uv_fs_cb cb)    
    cdef int uv_fs_fchown(uv_loop_t* loop,
                              uv_fs_t* req,
                              uv_file file,
                              uv_uid_t uid,
                              uv_gid_t gid,
                              uv_fs_cb cb)    
    cdef int uv_fs_lchown(uv_loop_t* loop,
                              uv_fs_t* req,
                              const char* path,
                              uv_uid_t uid,
                              uv_gid_t gid,
                              uv_fs_cb cb)    
    cdef int uv_fs_statfs(uv_loop_t* loop,
                              uv_fs_t* req,
                              const char* path,
                              uv_fs_cb cb)    


    enum uv_fs_event {
      UV_RENAME = 1,
      UV_CHANGE = 2
    }    


    struct uv_fs_event_s {
      UV_HANDLE_FIELDS
      /* private */
      char* path    
      UV_FS_EVENT_PRIVATE_FIELDS
    }    


    /*
    * uv_fs_stat() based polling file watcher.
    */
    struct uv_fs_poll_s {
      UV_HANDLE_FIELDS
      /* Private, don't touch. */
      void* poll_ctx    
    }    

    cdef int uv_fs_poll_init(uv_loop_t* loop, uv_fs_poll_t* handle)    
    cdef int uv_fs_poll_start(uv_fs_poll_t* handle,
                                  uv_fs_poll_cb poll_cb,
                                  const char* path,
                                  unsigned int interval)    
    cdef int uv_fs_poll_stop(uv_fs_poll_t* handle)    
    cdef int uv_fs_poll_getpath(uv_fs_poll_t* handle,
                                    char* buffer,
                                    size_t* size)    


    struct uv_signal_s {
      UV_HANDLE_FIELDS
      uv_signal_cb signal_cb    
      int signum    
      UV_SIGNAL_PRIVATE_FIELDS
    }    

    cdef int uv_signal_init(uv_loop_t* loop, uv_signal_t* handle)    
    cdef int uv_signal_start(uv_signal_t* handle,
                                  uv_signal_cb signal_cb,
                                  int signum)    
    cdef int uv_signal_start_oneshot(uv_signal_t* handle,
                                          uv_signal_cb signal_cb,
                                          int signum)    
    cdef int uv_signal_stop(uv_signal_t* handle)    

    cdef void uv_loadavg(double avg[3])    


    /*
    * Flags to be passed to uv_fs_event_start().
    */
    enum uv_fs_event_flags {
      /*
      * By default, if the fs event watcher is given a directory name, we will
      * watch for all events in that directory. This flags overrides this behavior
      * and makes fs_event report only changes to the directory entry itself. This
      * flag does not affect individual files watched.
      * This flag is currently not implemented yet on any backend.
      */
      UV_FS_EVENT_WATCH_ENTRY = 1,

      /*
      * By default uv_fs_event will try to use a kernel interface such as inotify
      * or kqueue to detect events. This may not work on remote filesystems such
      * as NFS mounts. This flag makes fs_event fall back to calling stat() on a
      * regular interval.
      * This flag is currently not implemented yet on any backend.
      */
      UV_FS_EVENT_STAT = 2,

      /*
      * By default, event watcher, when watching directory, is not registering
      * (is ignoring) changes in it's subdirectories.
      * This flag will override this behaviour on platforms that support it.
      */
      UV_FS_EVENT_RECURSIVE = 4
    }    


    cdef int uv_fs_event_init(uv_loop_t* loop, uv_fs_event_t* handle)    
    cdef int uv_fs_event_start(uv_fs_event_t* handle,
                                    uv_fs_event_cb cb,
                                    const char* path,
                                    unsigned int flags)    
    cdef int uv_fs_event_stop(uv_fs_event_t* handle)    
    cdef int uv_fs_event_getpath(uv_fs_event_t* handle,
                                      char* buffer,
                                      size_t* size)    

    cdef int uv_ip4_addr(const char* ip, int port, struct sockaddr_in* addr)    
    cdef int uv_ip6_addr(const char* ip, int port, struct sockaddr_in6* addr)    

    cdef int uv_ip4_name(const struct sockaddr_in* src, char* dst, size_t size)    
    cdef int uv_ip6_name(const struct sockaddr_in6* src, char* dst, size_t size)    
    cdef int uv_ip_name(const struct sockaddr* src, char* dst, size_t size)    

    cdef int uv_inet_ntop(int af, const void* src, char* dst, size_t size)    
    cdef int uv_inet_pton(int af, const char* src, void* dst)    


    struct uv_random_s {
      UV_REQ_FIELDS
      /* read-only */
      uv_loop_t* loop    
      /* private */
      int status    
      void* buf    
      size_t buflen    
      uv_random_cb cb    
      struct uv__work work_req    
    }    

    cdef int uv_random(uv_loop_t* loop,
                            uv_random_t* req,
                            void *buf,
                            size_t buflen,
                            unsigned flags,  /* For future extension     must be 0. */
                            uv_random_cb cb)    

    #if defined(IF_NAMESIZE)
    # define UV_IF_NAMESIZE (IF_NAMESIZE + 1)
    #elif defined(IFNAMSIZ)
    # define UV_IF_NAMESIZE (IFNAMSIZ + 1)
    #else
    # define UV_IF_NAMESIZE (16 + 1)
    #endif
